Added MaxWidth and MaxHeight property and resizing support

--- a/src/ImageUtility/ImageUtility.Shell/ImageUtility.Shell.csproj
+++ b/src/ImageUtility/ImageUtility.Shell/ImageUtility.Shell.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\InverseBooleanConverter.cs" />
     <Compile Include="Helpers\DirectoryHelper.cs" />
     <Compile Include="Helpers\ImageHelpers.cs" />
     <Compile Include="MVVM\Observable.cs" />
